--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,8 @@
 $red: #ee3d1b;
 $darkRed: #d52047;
 $black: #000000;
+$white: #ffffff;
+$lightRed: #dd4d64;
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -23,8 +25,31 @@ $black: #000000;
   outline: 0;
 }
 
-.page-wrapper {
-  overflow-x: hidden;
+//MEDIA-QUERIES
+$breakpoints: (
+  "xs": (
+    min-width: 576px
+  ),
+  "sm": (
+    min-width: 768px
+  ),
+  "md": (
+    min-width: 992px
+  ),
+  "lg": (
+    min-width: 1200px
+  ),
+  "xlg": (
+    min-width: 1441px
+  )
+) !default;
+
+@mixin respond-to($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+    @media #{inspect(map-get($breakpoints, $breakpoint))} {
+      @content;
+    }
+  }
 }
 
 html,
@@ -35,4 +60,99 @@ body {
   background-color: #fff;
   color: #000;
   font-family: "Lato", sans-serif;
+  font-style: normal;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+//Header
+
+.header__content {
+  height: 50vh;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  flex-direction: column;
+
+  @include respond-to("lg") {
+    height: 100vh;
+    position: relative;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 5vmin;
+    line-height: 6vmin;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    text-align: center;
+    display: none;
+
+    @include respond-to("md") {
+      display: block;
+      left: 431px;
+      top: 257px;
+    }
+
+    @include respond-to("lg") {
+      position: absolute;
+      width: 578px;
+      height: 86px;
+      left: 431px;
+      top: 257px;
+      font-size: 72px;
+      line-height: 86px;
+      display: flex;
+      align-items: center;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
+  }
+  p {
+    font-size: 20px;
+    line-height: 150%;
+    text-align: center;
+    font-weight: 600;
+    margin: 39px;
+
+    @include respond-to("lg") {
+      width: 540px;
+      height: 124px;
+      left: 450px;
+      top: 382px;
+      font-size: 24px;
+      position: absolute;
+      margin: 0;
+    }
+  }
+
+  button {
+    text-align: center;
+    text-transform: uppercase;
+    width: 160px;
+    height: 50px;
+    background: #ffffff;
+    border-radius: 6px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #ed4c5c;
+    line-height: 150%;
+
+    @include respond-to("lg") {
+      left: 640px;
+      top: 545px;
+      position: absolute;
+    }
+  }
 }
