add features section

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -56,7 +56,7 @@ body {
 /* HEADER
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 header {
-  position: fixed;
+  position: relative;
   width: 100vw;
   height: 50vh;
   color: $white;
