--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,9 @@ $darkRed: #d52047;
 $black: #000000;
 $white: #ffffff;
 $lightRed: #dd4d64;
+$lightBlack: #101010;
+$lightGrey: #fafafa;
+$linkRed: #ed4c5c;
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -75,17 +78,20 @@ a {
 //Header
 
 .header__content {
-  height: 50vh;
+  height: 100%;
   color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   flex-direction: column;
+  padding: 5vh 0;
 
   @include respond-to("lg") {
     height: 100vh;
     position: relative;
+    margin-top: 0;
+    padding: 0;
   }
 
   h1 {
@@ -95,12 +101,12 @@ a {
     letter-spacing: 0.05em;
     text-transform: uppercase;
     text-align: center;
-    display: none;
 
     @include respond-to("md") {
       display: block;
       left: 431px;
       top: 257px;
+      margin-top: 2em;
     }
 
     @include respond-to("lg") {
@@ -116,6 +122,7 @@ a {
       letter-spacing: 0.05em;
       text-transform: uppercase;
       color: #ffffff;
+      margin: 0;
     }
   }
   p {
@@ -153,6 +160,48 @@ a {
       left: 640px;
       top: 545px;
       position: absolute;
+    }
+  }
+}
+
+//Main
+
+.features {
+  height: 50vh;
+  color: $lightBlack;
+  background: $lightGrey;
+
+  @include respond-to("lg") {
+    height: 660px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .feature__item {
+    width: 293px;
+    height: 198px;
+    margin: auto;
+    text-align: center;
+    padding: 32px;
+    background: $white;
+    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    h2 {
+      font-size: 18px;
+      text-align: center;
+      margin: 63px 0;
+    }
+    p {
+      margin-top: 20px;
+      margin-bottom: 5px;
+      font-size: 12px;
+      line-height: 150%;
+    }
+    a {
+      color: $linkRed;
+      font-weight: bold;
+      font-size: 12px;
     }
   }
 }
