--- a/src/assets/scss/nav-responsive.css
+++ b/src/assets/scss/nav-responsive.css
@@ -1,8 +1,6 @@
 @media screen and (max-width: 320px) {
-  .signature-logo {
-    h1 {
-      display: none;
-    }
+  .signature-logo h1 {
+    display: none;
   }
 }
 
@@ -26,11 +24,9 @@
   .page-header .top-menu {
     padding: 4rem;
   }
-
   .page-header ul a {
     font-size: 1.6rem;
   }
-
   .page-header .search-form input {
     font-size: 2.4rem;
     height: 5rem;
@@ -42,7 +38,6 @@
   .page-header {
     padding: 0 3rem;
   }
-
   .page-header .panel,
   .page-header .open-mobile-menu,
   .page-header .vertical-logo,
@@ -51,83 +46,89 @@
   .page-header .top-menu-wrapper::before {
     display: none;
   }
-
   .page-header .horizontal-logo {
     display: block !important;
   }
   .menu {
-    display: flex !important;
-    align-items: center;
-    justify-content: right;
-  }
-
-  .page-header .top-menu-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+  }
+  .page-header .top-menu-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     color: var(--white);
   }
-
   .page-header .top-menu {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     position: static;
     width: auto;
     background: transparent;
-    transform: none;
+    -webkit-transform: none;
+            transform: none;
     padding: 0;
     overflow-y: visible;
-    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
   }
-
   .page-header .top-menu li + li {
     margin-top: 0;
   }
-
   .page-header .top-menu > li:not(:nth-last-child(2)) {
     margin-right: 3rem;
   }
-
   .page-header .top-menu > li > a {
     padding: 3rem 0.5rem;
   }
-
   .page-header ul a {
     font-size: 1.3rem;
   }
-
   .page-header .has-dropdown i {
     display: inline-block;
   }
-
   .page-header .sub-menu {
     display: none;
     position: absolute;
     top: 100%;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
     padding: 1.5rem 2rem;
     background: var(--purple-2);
   }
-
   .page-header .sub-menu li + li {
     margin-top: 1.2rem;
   }
-
   .page-header .sub-menu a {
     padding: 0.5rem 1rem;
     white-space: nowrap;
   }
-
   .page-header .has-dropdown {
     position: relative;
   }
-
   .page-header .has-dropdown:hover .sub-menu {
     display: block;
   }
-
   .page-header .search {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-left: 3rem;
   }
 }
@@ -136,14 +137,13 @@
   .page-header .search {
     margin-left: 5rem;
   }
-
   .page-header .search i {
     margin-right: 1.5rem;
   }
-
   .page-header .search span {
     display: block;
     font-weight: 500;
     font-size: 1.6rem;
   }
 }
+/*# sourceMappingURL=nav-responsive.css.map */
