--- a/src/assets/scss/header.css
+++ b/src/assets/scss/header.css
@@ -35,6 +35,24 @@ a:hover {
   cursor: pointer;
 }
 
+h2 {
+  padding: 63px 0;
+  color: black;
+  text-align: center;
+}
+
+h3 {
+  font-size: 18px;
+  text-align: center;
+}
+
+p {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  font-size: 12px;
+  line-height: 150%;
+}
+
 .header__content {
   height: 100%;
   color: #ffffff;
@@ -150,20 +168,16 @@ a:hover {
   background: #fafafa;
 }
 
-#features h2 {
-  padding: 63px 0;
-  color: black;
-  text-align: center;
-}
-
-#features .features {
+#features .features,
+#features .technology {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
 }
 
 @media (min-width: 1200px) {
-  #features .features {
+  #features .features,
+  #features .technology {
     padding-bottom: 124px;
     width: 90vw;
   }
@@ -213,18 +227,6 @@ a:hover {
   -webkit-box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-}
-
-#features .feature__item .feature__item--content h3 {
-  font-size: 18px;
-  text-align: center;
-}
-
-#features .feature__item .feature__item--content p {
-  margin-top: 20px;
-  margin-bottom: 5px;
-  font-size: 12px;
-  line-height: 150%;
 }
 
 #features .feature__item .feature__item--content a {
@@ -344,6 +346,12 @@ header::after {
   }
 }
 
+@media (min-width: 1200px) {
+  .page-header {
+    padding: 0 160px;
+  }
+}
+
 .page-header nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -354,9 +362,10 @@ header::after {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 3vmin;
+  font-size: 14px;
   position: relative;
   width: 100%;
+  text-transform: uppercase;
 }
 
 .page-header .horizontal-logo,
@@ -451,7 +460,7 @@ header::after {
 }
 
 .page-header .top-menu a {
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .page-header .top-menu-wrapper.show-offcanvas::before {
