--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -32,6 +32,24 @@ a:hover {
   cursor: pointer;
 }
 
+h2 {
+  padding: 63px 0;
+  color: black;
+  text-align: center;
+}
+
+h3 {
+  font-size: 18px;
+  text-align: center;
+}
+
+p {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  font-size: 12px;
+  line-height: 150%;
+}
+
 .header__content {
   height: 100%;
   color: #ffffff;
@@ -147,26 +165,22 @@ a:hover {
   background: #fafafa;
 }
 
-#features h2 {
-  padding: 63px 0;
-  color: black;
-  text-align: center;
-}
-
-#features .features {
+.features,
+.technology {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
 }
 
 @media (min-width: 1200px) {
-  #features .features {
+  .features,
+  .technology {
     padding-bottom: 124px;
     width: 90vw;
   }
 }
 
-#features .feature__item {
+.feature__item {
   position: relative;
   height: 400px;
   display: -webkit-box;
@@ -186,19 +200,19 @@ a:hover {
 }
 
 @media (min-width: 1200px) {
-  #features .feature__item {
+  .feature__item {
     width: 350px;
     padding: 0;
   }
 }
 
-#features .feature__item .feature__item--image {
+.feature__item .feature__item--image {
   display: block;
   height: 250px;
   margin: 0 auto;
 }
 
-#features .feature__item .feature__item--content {
+.feature__item .feature__item--content {
   position: absolute;
   top: 44%;
   width: 293px;
@@ -212,21 +226,32 @@ a:hover {
   border-radius: 8px;
 }
 
-#features .feature__item .feature__item--content h3 {
-  font-size: 18px;
-  text-align: center;
-}
-
-#features .feature__item .feature__item--content p {
-  margin-top: 20px;
-  margin-bottom: 5px;
-  font-size: 12px;
-  line-height: 150%;
-}
-
-#features .feature__item .feature__item--content a {
+.feature__item .feature__item--content a {
   color: #ed4c5c;
   font-weight: bold;
   font-size: 12px;
+}
+
+.technology {
+  color: #101010;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.technology .technology__item {
+  padding: 30px;
+  width: 255px;
+  text-align: center;
+}
+
+.technology .technology__item img {
+  margin: 0 auto;
 }
 /*# sourceMappingURL=main.css.map */
