--- a/src/assets/scss/header.css
+++ b/src/assets/scss/header.css
@@ -168,22 +168,24 @@ p {
   background: #fafafa;
 }
 
-#features .features,
-#features .technology {
+.features,
+.technology {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (min-width: 1200px) {
-  #features .features,
-  #features .technology {
+  .features,
+  .technology {
     padding-bottom: 124px;
     width: 90vw;
   }
 }
 
-#features .feature__item {
+.feature__item {
   position: relative;
   height: 400px;
   display: -webkit-box;
@@ -203,19 +205,19 @@ p {
 }
 
 @media (min-width: 1200px) {
-  #features .feature__item {
+  .feature__item {
     width: 350px;
     padding: 0;
   }
 }
 
-#features .feature__item .feature__item--image {
+.feature__item .feature__item--image {
   display: block;
   height: 250px;
   margin: 0 auto;
 }
 
-#features .feature__item .feature__item--content {
+.feature__item .feature__item--content {
   position: absolute;
   top: 44%;
   width: 293px;
@@ -229,10 +231,98 @@ p {
   border-radius: 8px;
 }
 
-#features .feature__item .feature__item--content a {
+.feature__item .feature__item--content a {
   color: #ed4c5c;
   font-weight: bold;
   font-size: 12px;
+}
+
+.technology {
+  color: #101010;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.technology .technology__item {
+  text-align: center;
+  width: 50vw;
+  padding: 3vw;
+  height: 290px;
+  position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 992px) {
+  .technology .technology__item {
+    width: 255px;
+    padding: 30px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.technology .technology__item .technology__item--image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.technology .technology__item .technology__item--image :nth-child(2) {
+  position: absolute;
+  top: 20%;
+  width: 12%;
+}
+
+@media (min-width: 992px) {
+  .technology .technology__item .technology__item--image :nth-child(2) {
+    top: 26%;
+    width: unset;
+  }
+}
+
+.technology .technology__item .technology__item--image img {
+  margin: 0 auto;
+}
+
+.technology .technology__item .technology__item--content {
+  margin-top: 19px;
+  padding: 0 34px 4px;
+}
+
+@media (min-width: 992px) {
+  .technology .technology__item .technology__item--content {
+    padding: 0;
+  }
 }
 
 :root {
