--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -170,6 +170,8 @@ p {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (min-width: 1200px) {
@@ -246,12 +248,77 @@ p {
 }
 
 .technology .technology__item {
-  padding: 30px;
-  width: 255px;
   text-align: center;
+  width: 50vw;
+  padding: 3vw;
+  height: 290px;
+  position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.technology .technology__item img {
+@media (min-width: 992px) {
+  .technology .technology__item {
+    width: 255px;
+    padding: 30px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.technology .technology__item .technology__item--image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.technology .technology__item .technology__item--image :nth-child(2) {
+  position: absolute;
+  top: 20%;
+  width: 12%;
+}
+
+@media (min-width: 992px) {
+  .technology .technology__item .technology__item--image :nth-child(2) {
+    top: 26%;
+    width: unset;
+  }
+}
+
+.technology .technology__item .technology__item--image img {
   margin: 0 auto;
+}
+
+.technology .technology__item .technology__item--content {
+  margin-top: 19px;
+  padding: 0 34px 4px;
+}
+
+@media (min-width: 992px) {
+  .technology .technology__item .technology__item--content {
+    padding: 0;
+  }
 }
 /*# sourceMappingURL=main.css.map */
