--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -321,4 +321,68 @@ p {
     padding: 0;
   }
 }
+
+.red-section {
+  background: #ed4c5c;
+  padding: 5vw;
+}
+
+@media (min-width: 992px) {
+  .red-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media (min-width: 1200px) {
+  .red-section {
+    padding: 0 156px;
+  }
+}
+
+@media (min-width: 992px) {
+  .red-section__content,
+  .red-section__slider {
+    width: 50%;
+  }
+}
+
+.red-section__content h1,
+.red-section__slider h1 {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 43px;
+}
+
+@media (min-width: 1200px) {
+  .red-section__content h1,
+  .red-section__slider h1 {
+    margin-top: 24px;
+  }
+}
+
+.red-section__content p,
+.red-section__slider p {
+  font-size: 14px;
+  line-height: 20px;
+  text-align: justify;
+  margin: 24px 0;
+}
+
+@media (min-width: 992px) {
+  .red-section__content p,
+  .red-section__slider p {
+    width: 445px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
