--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -22,6 +22,7 @@ body {
   font-family: "Lato", sans-serif;
   font-style: normal;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -358,6 +359,13 @@ p {
   }
 }
 
+.red-section__content,
+.red-section__slider,
+.contact-section__content,
+.contact-section__form {
+  padding: 5vw;
+}
+
 @media (min-width: 992px) {
   .red-section__content,
   .red-section__slider,
@@ -382,6 +390,7 @@ p {
   .contact-section__content h1,
   .contact-section__form h1 {
     margin-top: 24px;
+    width: 445px;
   }
 }
 
@@ -412,5 +421,29 @@ p {
   .contact-section {
     padding-bottom: 78px;
   }
+}
+
+.footer-section {
+  background: #101010;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1vw;
+}
+
+.footer-section img {
+  width: 30%;
+  margin: 0 auto;
+  border-radius: 6px;
 }
 /*# sourceMappingURL=main.css.map */
